--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -27,9 +27,14 @@
         list-style: none;
         display: flex;
         flex-direction: column;
-        gap: rem(10);
+        gap: rem(5);
         &--item{
             font-size: rem(14);
+            display: flex;
+            gap: rem(15);
+            &--icon{
+                width: rem(25);
+            }
             &--bold{
                 font-weight: 600;
             }
