--- a/src/styles/ProjectList.scss
+++ b/src/styles/ProjectList.scss
@@ -10,9 +10,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: rem(30);
+    padding-right: rem(30);
     &__form{
         //General properties
-        width: 100vw;
         margin-bottom: rem(40);
         //Display
         display: flex;
