--- a/src/styles/ProjectItem.scss
+++ b/src/styles/ProjectItem.scss
@@ -7,7 +7,7 @@
         &--item{
             //General properties
             width: rem(280);
-            height: rem(300);
+            height: rem(310);
             box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
             position: relative;
             @include mediaTablet(){
@@ -54,7 +54,11 @@
             }
             &--text{
                 font-size: rem(12);
-                
+                width: rem(250);
+                text-align: center;
+                @include mediaTablet(){
+                    width: 100%;
+                }
             }
             &--nav{
                 //General properties
