--- a/src/styles/core/_variables.scss
+++ b/src/styles/core/_variables.scss
@@ -5,5 +5,7 @@ $font-familyOpenSans: "Open Sans", sans-serif;
 $color-dark: #221f20;
 $color-light: #ffffff;
 $color-extra: #d96863;
+$color-grey-dark: rgba(114, 118, 119, 0.788);
 $color-grey: #d5d5d5;
 $color-gunmetal: #54585a;
+
