--- a/src/styles/AboutMe.scss
+++ b/src/styles/AboutMe.scss
@@ -5,7 +5,7 @@
 
 .hero{
     //General properties
-    margin-top: rem(30);
+    margin-top: rem(80);
     margin-bottom: rem(30);
     padding-left: rem(30);
     padding-right: rem(30);
@@ -14,113 +14,117 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: rem(30);
+    gap: rem(25);
     @include mediaTablet(){
         //General properties
-        height: rem(300);
+        height: 90vh;
+        padding-right: rem(0);
+        margin-top: rem(60);
+        margin-bottom: rem(0);
         //Display
-        flex-direction: row;
+        flex-direction: row-reverse;
+        gap: rem(100);
+    }
+    @include mediaTablet(){
+        gap: rem(200);
     }
     &__info{
+        margin-top: rem(40);
         //Display
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: rem(20);
+        gap: rem(30);
         @include mediaTablet(){
             //General properties
-            width: rem(500);
-            //Display
-            gap: rem(12);
-        }
-        @include mediaDesktop(){
-            //General properties
-            width: rem(600);
-            //Display
-            gap: rem(12);
+            width: rem(400);
+            margin-top: rem(0);
         }
         &--title{
             //General properties
-            font-size: rem(25);
+            font-size: rem(34);
             font-weight: 800;
+            @include mediaTablet(){
+                font-size: rem(34);
+            }
         }
         &--subtitle{
             //General properties
-            font-size: rem(13);
-            font-weight: 600;
+            font-size: rem(14);
+            font-weight: 400;
         }
         &--text{
             //General properties
             list-style: none;
-            font-size: rem(12);
+            font-size: rem(14);
             //Display
             display: flex;
             flex-direction: column;
             gap: rem(10);
             @include mediaTablet(){
+                //General properties
+                font-size: rem(12);
+                //Display
                 gap: rem(0);
             }
         }
-        &--btn{
-            //General properties
-            width: rem(100);
-            height: rem(40);
-            color: $color-light;
-            background-color: $color-dark;
-            font-size: rem(11.5);
-            text-decoration: none;
-            margin-top: rem(5);
-            //Display
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }   
         &--load{
             //General properties
+            cursor: pointer;
+            font-size: rem(13);
+            font-weight: 700;
+            color: $color-dark;
+            text-align:center;
             text-decoration: none;
-            color: $color-light;
-            background-color: $color-dark;
-            width: fit-content;
-            padding: rem(6) rem(8) rem(6) rem(8);
-            font-size: rem(12);
+            padding: rem(5) rem(0) rem(5) rem(0);
+            //Display
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
             &:hover{
-                background-color: $color-extra;
+                //General properties
+                color: $color-grey-dark;
             }
         }     
             &--icon{
                 //General properties
                 cursor: pointer;
                 list-style: none;
-                font-size: rem(14);
+                font-size: rem(15);
                 padding: rem(5);
                 //Display
                 display: flex;
                 gap: rem(15);
                 &--link{
+                    //General properties
                     color: $color-dark;
                     &:hover{
-                        color: $color-extra;
+                        //General properties
+                        color: $color-grey-dark;
                     }
                 }     
+                @include mediaTablet(){
+                    //General properties
+                    font-size: rem(15);
+                    //Display
+                    gap: rem(20);
+                }
             }
     }
     &__img{
-        //General properties
-        width: rem(260);
-        height: rem(260);
-        background-image: url('../images/ana-bollain.jpg');
-        background-position: top center;
-        background-size: cover;
-        opacity: 85%;
         @include mediaTablet(){
             //General properties
             width: rem(260);
             height: rem(260);
+            background-image: url('../images/ana-bollain.jpg');
+            background-position: top center;
+            background-size: cover;
+            opacity: 85%;
         }
         @include mediaTablet(){
             //General properties
-            width: rem(280);
-            height: rem(280);
+            width: 40%;
+            height: 70%;
         }
     }
 }
