Update aboutme JS & CSS

--- a/src/styles/FilterBtn.scss
+++ b/src/styles/FilterBtn.scss
@@ -9,6 +9,7 @@
     &__check{
         //General properties
         appearance: none;
+        -webkit-appearance: none;
         //Position
         position: absolute;
     }
