Update CSS radio button

--- a/src/styles/FilterBtn.scss
+++ b/src/styles/FilterBtn.scss
@@ -8,6 +8,7 @@
     position: relative;
     &__check{
         //General properties
+        display: none;
         appearance: none;
         -webkit-appearance: none;
         //Position
